bug(design): Solve major design issues  - fix cause action issue on the cause details  - remove the amount on the share till number text  - fix issue on the scrollbar for the donation success card [Fixes]

--- a/pages/causes/[slug]/single.module.scss
+++ b/pages/causes/[slug]/single.module.scss
@@ -2,6 +2,9 @@
 @import "../../../styles/dimensions.scss";
 
 .dashboard {
+  &__inner {
+    padding-top: 4rem;
+  }
   &__banner {
     border-radius: 4px;
     overflow: hidden;
